Refactor UI and services, add ingredient editing
Updated AppShell.xaml and AppShell.xaml.cs to add routes and event handlers. Enhanced AuthService with a new LogOut method. Refactored GeminiService with new chat sessions and methods. Updated various XAML files for improved UI and functionality. Removed EditRecipeIngredientsPageView and its code-behind. Added new DTOs and services. Implemented EditCurrentIngredientPageView and its ViewModel for ingredient editing.

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -180,18 +180,17 @@
                     Glyph="{x:Static m:MaterialSharp.Grocery}"
                     Color="{StaticResource WhiteText}" />
             </Tab.Icon>
-            <ShellContent Title="Ingredients" ContentTemplate="{DataTemplate AdminView:EditIngredientsPageView}" />
-            <ShellContent Title="RecipeIngredients" ContentTemplate="{DataTemplate AdminView:EditRecipeIngredientsPageView}" />
+            <ShellContent
+                Title="Ingredients"
+                ContentTemplate="{DataTemplate AdminView:EditIngredientsPageView}"
+                Route="editingredient" />
         </Tab>
 
     </FlyoutItem>
 
 
 
-    <MenuItem
-        Command="{Binding HelpCommand}"
-        CommandParameter="https://learn.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell"
-        Text="Logout">
+    <MenuItem Clicked="MenuItem_OnClicked" Text="Logout">
         <MenuItem.IconImageSource>
             <FontImageSource
                 FontFamily="MaterialSharp"
