--- a/View/Auth/PasswordVerifyCodePageView.xaml
+++ b/View/Auth/PasswordVerifyCodePageView.xaml
@@ -13,11 +13,11 @@
     Background="{StaticResource WhiteText}">
     <ScrollView>
         <VerticalStackLayout
-            Margin="{OnPlatform Android=16,
-                                WinUI=0}"
-            HorizontalOptions="{OnPlatform Android=Fill,
-                                           WinUI=Center}"
-            Spacing="12">
+            Margin="32,0,32,0"
+            Background="Transparent"
+            HorizontalOptions="Fill"
+            Spacing="12"
+            VerticalOptions="Center">
             <Label
                 FontAttributes="Bold"
                 FontSize="35"
