--- a/View/Auth/NewPasswordPageView.xaml
+++ b/View/Auth/NewPasswordPageView.xaml
@@ -14,10 +14,10 @@
     Background="{StaticResource WhiteText}">
     <ScrollView>
         <VerticalStackLayout
-            Margin="16,16,16,0"
-            HorizontalOptions="{OnPlatform Android=Fill,
-                                           WinUI=Center}"
-            Spacing="8"
+            Margin="32,0,32,0"
+            Background="Transparent"
+            HorizontalOptions="Fill"
+            Spacing="12"
             VerticalOptions="Center">
             <Label
                 FontAttributes="Bold"
